# lite-alloc

./: Cargo.toml  Dockerfile  README.md  README_CN.md
.github/workflows/: ci.yml
benches/: alloc_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bump_freelist.rs  freelist.rs  fuzz_target_1.rs  segregated_bump.rs
src/: lib.rs
src/single_threaded/: bump_freelist.rs  freelist.rs  segregated_bump.rs
tests/: bump_freelist_tests.rs  freelist_tests.rs  segregated_bump_tests.rs
