[package]
name = "lite_alloc"
version = "0.1.0"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "A lightweight, single-threaded memory allocator designed for WebAssembly and embedded systems."
license = "MIT"
repository = "https://github.com/ShaoG-R/lite_alloc"
homepage = "https://github.com/ShaoG-R/lite_alloc"
documentation = "https://docs.rs/lite_alloc"
readme = "README.md"
keywords = ["allocator", "wasm", "no_std", "embedded", "memory"]
categories = ["memory-management", "embedded", "wasm", "no-std"]
include = ["src/**/*", "Cargo.toml", "README.md", "README_CN.md", "LICENSE"]

[dependencies]

[features]
realloc = []

[dev-dependencies]
criterion = "0.7"

[profile.release]
lto = true
# debug = true
opt-level = "z"

[[bench]]
name = "alloc_bench"
harness = false
